--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,9 +1,40 @@
 @import 'public';
 nav{
 	//border:1px solid black;
+	position: relative;
 	width: 100%;
 	z-index: 1000;
 	position: absolute;
+	.special_div{
+		display: none;
+		overflow: hidden;
+		position: absolute;
+		top: 52px;
+		right: 0;
+		@include size(272px,202px);
+		background: white;
+		border: 1px solid #eaeaea;
+		h1,h2,h3{
+			font-weight: normal;
+			margin-left: 30px;
+			margin: o auto;
+			line-height: 60px;
+			font-size: 14px;
+			@include size(212px,60px);
+			margin-top: 0;
+			margin-bottom: 0;
+			img{
+				padding-right: 20px;
+			}
+		}
+		h1{
+			margin-top: 10px;
+		}
+		h2{
+			border-top: 1px solid #eaeaea;
+			border-bottom: 1px solid #eaeaea;
+		}
+	}
 	.top{
 		@include size(1200px,60px);
 		//border:1px solid black;
