--- a/src/sass/register.scss
+++ b/src/sass/register.scss
@@ -43,14 +43,32 @@ nav{
 	margin: 0 auto;
 	.center_div{
 		position: relative;
-		.center_div_div{
-		position: absolute;
-			@include size(90px,48px);
-			line-height: 48px;
-			text-align: center;
+		.center_input1{
+			text-indent: 108px;
 			font-size: 14px;
 		}
-	} 
+		.center_div_div{
+		position: absolute;
+			@include size(100px,48px);
+			line-height: 54px;
+			text-align: center;
+			font-size: 14px;
+			span{
+				width: 100%;
+				border-right: 1px solid;
+				font-size: 14px;
+				color: black;
+			}
+		}
+	}
+	.center_div2,.center_div3{
+		position: relative;
+		span{
+			position: absolute;
+			right: 13px;
+			top: 18px;
+		}
+	}
 	input{
 		@include size(342px,48px);
 		background: #f7f7f7;
@@ -59,6 +77,7 @@ nav{
 		text-indent: 16px;
 		font-size: 14px;
 	}
+	
 	.center_first_p{
 		font-size: 12px;
 		color: #b0b0b0;
@@ -73,6 +92,7 @@ nav{
 		padding-bottom: 10px;
 		font-family: sans-serif;
 	}
+	
 	.center_input3{
 		@include size(210px,48px);
 		margin-right: 12px;
