--- a/src/sass/list.scss
+++ b/src/sass/list.scss
@@ -1,4 +1,7 @@
 @import 'public';
+body{
+	background: #f0f0f0;
+}
 nav{
 	//border:1px solid black;
 	width: 100%;
@@ -88,5 +91,295 @@ nav{
     height: 600px;
 }  
 #swiper-wrapper .swiper-slide img{
-	@include size(100%,100%);
+	@include size(1440px,600px);
+}
+#swiper-wrapper_img5{
+	position: absolute;
+	top: 100px;
+	left: 200px;
+}
+.center{
+	@include size(900px,480px);
+	//border: 1px solid black;
+	margin: 0 auto;
+	margin-top: 80px;
+	position: relative;
+	.center_ul{	
+			@include size(400px,24px);
+			position: absolute;
+			right :3px;
+			top :270px;
+			z-index: 2000;
+			li:nth-of-type(1){
+				position: absolute;
+				cursor: pointer;
+				@include size(14px,14px);
+				background: rgb(163, 122, 254);
+				border-radius: 50%;
+				left: 160px;
+			}
+			li:nth-of-type(2){
+				position: absolute;
+				cursor: pointer;
+				@include size(14px,14px);
+				background: rgb(0, 144, 141);
+				border-radius: 50%;
+				left: 195px;
+			}
+			li:nth-of-type(3){
+				position: absolute;
+				cursor: pointer;
+				@include size(14px,14px);
+				background: rgb(0, 144, 141);
+				border-radius: 50%;
+				left: 230px;
+			}
+		
+	}
+	.center_div1,.center_div2,.center_div3{
+		@include size(900px,480px);
+		position: absolute;
+		img{
+			@include size(900px,480px);
+		}
+		h3{
+			margin-top: 50px;
+		}
+	}
+	.center_div1{
+		z-index: 1000;
+		opacity: 0;
+		.center_div1_div{
+			position: absolute;
+			top: 0;
+			right: 0;
+			color: white;
+			@include size(400px,480px);
+			h1{
+				margin-top: 168px;
+				font-size: 20px;
+			}
+			h2{
+				font-size: 34px;
+				margin-bottom: 42px;
+			}
+			h3{
+				font-size: 24px;
+			}
+			h4{
+				@include size(150px,44px);
+				border-radius: 50px;
+				background: #05b570;
+				margin: 0 auto;
+				line-height: 44px;
+				margin-top: 30px;
+			}
+			h1,h2,h3,h4{
+				text-align: center;
+				font-weight: normal;
+			}
+		}
+	}
+	.center_div2{
+		z-index: 1002;
+		opacity: 1;
+		.center_div2_div{
+			position: absolute;
+			top: 0;
+			right: 0;
+			color: white;
+			@include size(400px,480px);
+			h1{
+				margin-top: 168px;
+				font-size: 20px;
+			}
+			h2{
+				font-size: 34px;
+				margin-bottom: 42px;
+			}
+			h3{
+				font-size: 24px;
+			}
+			h4{
+				@include size(150px,44px);
+				border-radius: 50px;
+				background: #05b570;
+				margin: 0 auto;
+				line-height: 44px;
+				margin-top: 30px;
+			}
+			h1,h2,h3,h4{
+				text-align: center;
+				font-weight: normal;
+			}
+		}
+	}
+	.center_div3{
+		z-index: 1003;
+		opacity: 1;
+		.center_div3_div{
+			position: absolute;
+			top: 0;
+			right: 0;
+			color: white;
+			@include size(400px,480px);
+			h1{
+				margin-top: 168px;
+				font-size: 20px;
+			}
+			h2{
+				font-size: 34px;
+				margin-bottom: 42px;
+			}
+			h3{
+				font-size: 24px;
+			}
+			h4{
+				@include size(150px,44px);
+				border-radius: 50px;
+				background: #05b570;
+				margin: 0 auto;
+				line-height: 44px;
+				margin-top: 30px;
+			}
+			h1,h2,h3,h4{
+				text-align: center;
+				font-weight: normal;
+			}
+		}
+	}
+}
+.center_2,.center_3{
+	@include size(894px,480px);
+	margin: 0 auto;
+	margin-top: 20px;
+	img{
+		@include size(894px,480px);
+	}
+}
+.img_div{
+	@include size(900px,1830px);
+	margin: 0 auto;
+	.img_div_div3,.img_div_div4{
+		padding-top: 36px;
+	}
+	.img_div_div3,.img_div_div5,.img_div_div7{
+		overflow: hidden;
+		float: left;
+		@include size(438px,583px);
+	}
+	.img_div_div4,.img_div_div6{
+		overflow: hidden;
+		float: right;
+		@include size(438px,583px);
+	}
+	.img_div_div3,.img_div_div4,.img_div_div5,.img_div_div6{
+		padding-bottom: 18px;
+	}
+	.img_div_div5,.img_div_div6{
+		padding-top: 18px;
+	}
+	.img_div_div7{
+		padding-top: 18px;
+	}
+}
+.navigator{
+	@include size(900px,34px);
+	margin: 0 auto;
+	margin-bottom: 18px;
+	//border: 1px solid black;
+	.navigator_div{
+		float: left;
+		font-size: 22px;
+		line-height: 34px;
+		font-weight: bold;
+		font-family: "方正悠黑 510M","PingFang SC","Microsoft YaHei","Helvetica Neue","Helvetica","Arial";
+	}
+	ul{
+		float: right;
+		li{
+			float: left;
+			height: 34px;
+			padding-left: 16px;
+			padding-right: 16px;
+			line-height: 34px;
+			text-align: center;
+			font-family: "方正悠黑 510M","PingFang SC","Microsoft YaHei","Helvetica Neue","Helvetica","Arial";
+			border-radius: 18px;
+			font-size: 15px;
+			color: #666666;
+			cursor: pointer;
+		}
+	}
+}
+
+.special{
+	width: 922px;
+	margin: 0 auto;
+	//border: 1px solid black;
+}
+
+.super{
+	width: 1440px;
+	background: white;
+}
+.bottom{
+	width: 100%;
+	.bottom1{
+		@include size(1200px,280px)
+		//border-bottom:1px solid #878383;
+		dl{
+			@include paddleftright(10px,0);
+			padding-top: 50px;
+			dt{
+				font-size: 16px;
+			}
+			dd{
+				font-size: 12px;
+				line-height: 30px
+			}
+		}
+		.bottom_in{
+			@include paddleftright(00px,0px);
+			dd{
+				color: #666;
+			}
+		}
+		.bottom_in2{
+			float: right;
+			text-align: right;
+			dt{
+				@include size(150px,50px);
+				border-radius: 20px;
+				background: #666666;
+				color: white;
+				float: right;
+				text-align: center;
+				line-height: 50px;
+			}
+			.first_dd{
+				font-size: 22px;
+				color: black;
+			}
+			.last_dd{
+				color: #b8b8b8;
+			}
+		}
+	}
+	.bottom_in{
+		@include paddleftright(00px,0px);
+	}
+}
+.super_bottom{
+	overflow: hidden;
+	padding-top: 30px;
+	clear: both;
+	.bottom2{
+		@include size(1200px,140px);
+		border-top: 1px solid #878383;
+		padding-top: 30px;
+		.bottom_in3{
+			text-align:right;
+		}
+	}
 }
